--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ loom {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.10.1'
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
